[gd_scene load_steps=8 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://Tileset/Fondo.png" type="Texture" id=2]
[ext_resource path="res://Tileset/sector26.png" type="Texture" id=3]
[ext_resource path="res://Tileset/sector12.png" type="Texture" id=4]
[ext_resource path="res://Tileset/sector20.png" type="Texture" id=5]
[ext_resource path="res://Tileset/sector13.png" type="Texture" id=6]
[ext_resource path="res://Tileset/sector17.png" type="Texture" id=7]

[node name="Control" type="Control"]
pause_mode = 2
margin_left = 478.012
margin_top = 208.023
margin_right = 518.012
margin_bottom = 248.023
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 37.9478, 91.0745 )
texture = ExtResource( 2 )

[node name="sector26" type="Sprite" parent="Sprite"]
position = Vector2( -6.33148, -146.961 )
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -30.012
margin_top = -16.023
margin_right = 22.988
margin_bottom = 176.977

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_top = 79.0
margin_right = 166.0
margin_bottom = 154.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 81.0
margin_bottom = 75.0

[node name="start" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 81.0
margin_bottom = 75.0
icon = ExtResource( 4 )
flat = true

[node name="Sprite2" type="Sprite" parent="CenterContainer/HBoxContainer/VBoxContainer"]
visible = false
position = Vector2( 36.1092, 109.48 )
texture = ExtResource( 5 )

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 85.0
margin_right = 166.0
margin_bottom = 75.0

[node name="exit" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
margin_right = 81.0
margin_bottom = 74.0
icon = ExtResource( 6 )
flat = true

[node name="Sprite" type="Sprite" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
visible = false
position = Vector2( 43.2562, 108.968 )
texture = ExtResource( 7 )
[connection signal="mouse_entered" from="CenterContainer/HBoxContainer/VBoxContainer/start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/HBoxContainer/VBoxContainer/start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="CenterContainer/HBoxContainer/VBoxContainer2/exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/HBoxContainer/VBoxContainer2/exit" to="." method="_on_exit_mouse_exited"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer2/exit" to="." method="_on_exit_pressed"]
